servlet database students

--- a/Lesson26ServletDatabase/src/main/webapp/main.css
+++ b/Lesson26ServletDatabase/src/main/webapp/main.css
@@ -1,8 +1,8 @@
 p {
-    color: bisque;
+    color: darkblue;
     font-size: 30px;
 }
 
-.blue_text {
-    color: black;
+.purple_text {
+    color: rebeccapurple;
 }
