--- a/Lesson26ServletDatabase/src/main/webapp/main.css
+++ b/Lesson26ServletDatabase/src/main/webapp/main.css
@@ -1,8 +1,15 @@
 p {
-    color: darkblue;
-    font-size: 30px;
+    color: red;
+    font-size: 40px;
+    caret-shape: auto;
 }
 
-.purple_text {
-    color: rebeccapurple;
+.red_text {
+    color: red;
 }
+
+.blue_text {
+    color: darkblue;
+}
+
+
