--- a/Lesson40SpringMvcTest/src/main/webapp/WEB-INF/views/first/hello.html
+++ b/Lesson40SpringMvcTest/src/main/webapp/WEB-INF/views/first/hello.html
@@ -2,7 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Hello World</title>
+  <title>Hello</title>
 </head>
-<body>Hello world!</body>
+<body>
+Hello!
+</body>
+<a href="/goodbye">Goodbye!</a>
 </html>
