--- a/Lesson40SpringMvcTest/src/main/webapp/WEB-INF/views/second/exit.html
+++ b/Lesson40SpringMvcTest/src/main/webapp/WEB-INF/views/second/exit.html
@@ -2,11 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Goodbye</title>
+  <title>Exit</title>
 </head>
 <body>
-Goodbye!
-<a href="/hello">Hello!</a>
-<or href="/exit">Exit!</or>
+No more links!
 </body>
 </html>
